# vhcalc

./: .bandit  .dockerignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  LICENSE  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  sitemap.xml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker-publish.yaml  main-updated.yaml  python-check.yaml  python-publish.yaml
contributing/: index.html
docs/: README.md  contributing.md
docs/assets/css/: custom.css
search/: search_index.json
tasks/: build.py  common.py  env.py  git.py  secure.py  style.py  test.py
tests/: conftest.py  test_app.py
tests/data/: big_buck_bunny_trailer_480p.mkv
tests/services/: test_reader_frames.py
vhcalc/: app.py
vhcalc/models/: __init__.py  imghash_function.py  metadata.py  url.py
vhcalc/services/: __init__.py  imghashes.py  reader_frames.py
vhcalc/tools/: chunk.py  click_default_group.py  docenum.py  ffmeg_extract_frame.py  imghash.py  progress_bar.py  rich_colums.py  version_extended_informations.py
vhcalc/tools/forked/: click_path.py  imageio_ffmpeg_io.py
